# eng_practices_hse_course

./: .pre-commit-config.yaml  README.md  linting.md  pyproject.toml
src/: nn_practice.ipynb  sanity_test.py  sanity_test_dag.py  sanity_tests.py
src/DVC/: dvc.py  neptune_dvc.py
src/classifier/: __init__.py  mlp_classifier.py
src/encoders/: __init__.py  one_hot.py
src/nn_modules/: __init__.py  linear.py  module.py  relu.py  softmax.py
